--- a/Excel/C#/COMAddin Examples/COMAddinRibbonExample/COMAddinRibbonExample.csproj
+++ b/Excel/C#/COMAddin Examples/COMAddinRibbonExample/COMAddinRibbonExample.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{9ADAAB8C-1785-4956-B210-08E592674E63}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>COMAddinRibbonExample</RootNamespace>
-    <AssemblyName>COMAddinRibbonExample</AssemblyName>
+    <RootNamespace>COMAddinRibbonExampleCS4</RootNamespace>
+    <AssemblyName>COMAddinRibbonExampleCS4</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
