- add new tutorials
Imported from NetOffice r89167
https://netoffice.codeplex.com/SourceControl/changeset/89167

--- a/Excel/VB/Examples/ExcelExamples/ExcelExamples VB.vbproj
+++ b/Excel/VB/Examples/ExcelExamples/ExcelExamples VB.vbproj
@@ -84,6 +84,7 @@
     <Import Include="System.Data" />
     <Import Include="System.Drawing" />
     <Import Include="System.Diagnostics" />
+    <Import Include="System.Globalization" />
     <Import Include="System.Reflection" />
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
