--- a/Word/VB/Examples/WordExamples/WordExamples VB.vbproj
+++ b/Word/VB/Examples/WordExamples/WordExamples VB.vbproj
@@ -82,6 +82,7 @@
     <Import Include="System.Data" />
     <Import Include="System.Drawing" />
     <Import Include="System.Diagnostics" />
+    <Import Include="System.Globalization" />
     <Import Include="System.IO" />
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
