- finish Twitter Addin - update Tools namespace - add Build Tools - add Addin Removal Tool
Imported from NetOffice r95420
https://netoffice.codeplex.com/SourceControl/changeset/95420

--- a/Other/Outlook Addin - Use Twitter/Outlook Addin - Use Twitter/Properties/Settings.settings
+++ b/Other/Outlook Addin - Use Twitter/Outlook Addin - Use Twitter/Properties/Settings.settings
@@ -14,12 +14,11 @@
     <Setting Name="AccessSecret" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Alerts" Type="System.String" Scope="User">
-      <Value Profile="(Default)">@netoffice
-@twitter</Value>
-    </Setting>
     <Setting Name="RefreshInterval" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">90</Value>
+    </Setting>
+    <Setting Name="Enabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
