--- a/Other/Outlook Addin - Use Twitter/Outlook Addin - Use Twitter/app.config
+++ b/Other/Outlook Addin - Use Twitter/Outlook Addin - Use Twitter/app.config
@@ -19,12 +19,11 @@
             <setting name="AccessSecret" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Alerts" serializeAs="String">
-                <value>@netoffice
-@twitter</value>
-            </setting>
             <setting name="RefreshInterval" serializeAs="String">
                 <value>90</value>
+            </setting>
+            <setting name="Enabled" serializeAs="String">
+                <value>False</value>
             </setting>
         </Sample.Addin.Properties.Settings>
     </userSettings>
