[Internal Commit] - delete NO Toolbox 1.2 - improve IExtensibility COM Addin Examples register code again - fix Outlook VB NetOffice COMAddin example - improve NetOffice.Core assembly detection
Imported from NetOffice 111509
https://netoffice.codeplex.com/SourceControl/changeset/111509
Legacy NetOffice Git repository commit 466c8866114eb65b309e4a8b8b8569f68b03bc54

--- a/Outlook/VB/NetOffice COMAddin Examples/Extended/NetOffice Tools - Extended.vbproj
+++ b/Outlook/VB/NetOffice COMAddin Examples/Extended/NetOffice Tools - Extended.vbproj
@@ -122,7 +122,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="RibbonUI.xml" />
+    <EmbeddedResource Include="RibbonUI.xml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{94E38DFF-614B-4CBD-B67C-F211BB35CE8B}" />
