--- a/Other/Excel Addin - Google Translation/ServerHost/Sample.ServerHost.csproj
+++ b/Other/Excel Addin - Google Translation/ServerHost/Sample.ServerHost.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>NetOffice.LocalSampleServer</RootNamespace>
     <AssemblyName>LocalSampleServer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -65,6 +66,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
