--- a/Misc/VB/COMAddin Examples/NetOfficeTools SuperAddin/NetOfficeTools - SuperAddin.vbproj
+++ b/Misc/VB/COMAddin Examples/NetOfficeTools SuperAddin/NetOfficeTools - SuperAddin.vbproj
@@ -23,6 +23,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>NetOfficeTools.SuperAddinVB4.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <RegisterForComInterop>true</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DocumentationFile>NetOfficeTools.SuperAddinVB4.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <RegisterForComInterop>true</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup>
     <OptionExplicit>On</OptionExplicit>
