[Regular Commit] - fix minor issue in Developer Toolbox assembly loader(AppDomain.ResolveAssembly)
Imported from NetOffice 113691
https://netoffice.codeplex.com/SourceControl/changeset/113691
Legacy NetOffice Git repository commit b55b20fc296be3e29bda7479590c5fc3f614a4e8

--- a/Excel/C#/Standard Examples/ExcelExamples/ExcelExamples CSharp.csproj
+++ b/Excel/C#/Standard Examples/ExcelExamples/ExcelExamples CSharp.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Examples\Example09.Designer.cs">
       <DependentUpon>Example09.cs</DependentUpon>
     </Compile>
+    <Compile Include="Examples\Example10.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
