--- a/Excel/C#/NetOffice COMAddin Examples/02 Ribbons And Panes/02 Ribbons and Panes.csproj
+++ b/Excel/C#/NetOffice COMAddin Examples/02 Ribbons And Panes/02 Ribbons and Panes.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RegisterForComInterop>false</RegisterForComInterop>
+    <RegisterForComInterop>true</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,16 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ExcelApi, Version=1.7.4.0, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\NetOffice.Excel.1.7.4-alpha-32\lib\net40\ExcelApi.dll</HintPath>
+    <Reference Include="ExcelApi, Version=1.7.4.37, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\NetOffice.Excel.1.7.4-alpha-37\lib\net40\ExcelApi.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="NetOffice, Version=1.7.4.0, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\NetOffice.Core.1.7.4-alpha-32\lib\net40\NetOffice.dll</HintPath>
+    <Reference Include="NetOffice, Version=1.7.4.37, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\NetOffice.Core.1.7.4-alpha-37\lib\net40\NetOffice.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="OfficeApi, Version=1.7.4.0, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\NetOffice.Core.1.7.4-alpha-32\lib\net40\OfficeApi.dll</HintPath>
+    <Reference Include="OfficeApi, Version=1.7.4.37, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\NetOffice.Core.1.7.4-alpha-37\lib\net40\OfficeApi.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
@@ -50,8 +50,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="VBIDEApi, Version=1.7.4.0, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\NetOffice.Core.1.7.4-alpha-32\lib\net40\VBIDEApi.dll</HintPath>
+    <Reference Include="VBIDEApi, Version=1.7.4.37, Culture=neutral, PublicKeyToken=d0b2dc7c792d5ca6, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\NetOffice.Core.1.7.4-alpha-37\lib\net40\VBIDEApi.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
